--- a/src/app/components/elements/singup/singup.component.html
+++ b/src/app/components/elements/singup/singup.component.html
@@ -1,14 +1,15 @@
 <div id="signup">
   <div id="signupform">
-    <form [formGroup]="regForm" (ngSubmit)="onRegistrationSubmit()"  >
-
-      <label>First Name</label>
-      <input formControlName="nickName" [ngClass]="displayFieldCss(regForm, 'nickName', 'signupSubmitAttempt')" type="text">
+    <form [formGroup]="regForm" (ngSubmit)="onRegistrationSubmit()">
+      <label class="signUpLabel">NickName</label>
+      <input formControlName="nickName" [ngClass]="displayFieldCss(regForm, 'nickName', 'signupSubmitAttempt')"
+             type="text">
       <p *ngIf="isFieldValid(regForm, 'nickName', 'signupSubmitAttempt')" class="error-msg">
         <span *ngIf="regForm.get('nickName')['errors']['required']">This field is required</span>
       </p>
-      <label>Last Name</label>
-      <input formControlName="interest" [ngClass]="displayFieldCss(regForm, 'interest', 'signupSubmitAttempt')"  type="text">
+      <label class="signUpLabel">Interest</label>
+      <input formControlName="interest" [ngClass]="displayFieldCss(regForm, 'interest', 'signupSubmitAttempt')"
+             type="text">
       <p *ngIf="isFieldValid(regForm, 'interest', 'signupSubmitAttempt')" class="error-msg">
         <span *ngIf="regForm.get('interest')['errors']['required']">This field is required</span>
       </p>
