--- a/src/app/components/elements/chat-users/chat-users.component.html
+++ b/src/app/components/elements/chat-users/chat-users.component.html
@@ -4,6 +4,7 @@
       <span></span>
       <h5>{{user.nickName}}</h5>
       <small>{{user.interest}}</small>
+      <p class="counter" *ngIf="user.count">{{user.count}}</p>
     </div>
   </div>
 </li>
