--- a/src/app/components/elements/profile/profile.component.html
+++ b/src/app/components/elements/profile/profile.component.html
@@ -10,5 +10,5 @@
 </div>
 <div>
   <app-active-user-header [activeUser]="activeUser" *ngIf="activeUser"></app-active-user-header>
-  <app-userchat [user]="user" [activeUser]="activeUser"></app-userchat>
+  <app-userchat [user]="user" [users]="users" [activeUser]="activeUser"></app-userchat>
 </div>
