--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -116,7 +116,18 @@ body{
   width: 100%;
   height: 570px;
 }
-
+.counter{
+  position: absolute;
+  top: -9px;
+  right: -35px;
+  height: 13px;
+  width: 13px;
+  background: #489ff7;
+  text-align: center;
+  padding: 3px;
+  font-size: 12px;
+  border-radius: 50%;
+}
 .typeing{
   width: 66px;
   /* float: right; */
