--- a/src/app/components/elements/user-chat/user-chat.component.html
+++ b/src/app/components/elements/user-chat/user-chat.component.html
@@ -15,6 +15,6 @@
     </div>
   </div>
 </ng-container>
-<ng-container *ngIf="!room">
+<ng-container *ngIf="!room && !activeUser">
   <p class="chooseRom" >Please choose chat room</p>
 </ng-container>
